--- a/Project/src/Components/School/Std_full_details.css
+++ b/Project/src/Components/School/Std_full_details.css
@@ -1,38 +1,13 @@
-.std_full_detail_card {
-    width: 45vw;
-    height: 90vh;
-    margin: 30px auto; 
-    border-radius: 10px;
-    background: linear-gradient(135deg, #555555, #302f2f);
-    color: white;
-    font-family: "Open Sans", Arial, sans-serif;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-    display: grid;
-    justify-content: center;
-    align-items: center;
-}
+@import url('https://fonts.googleapis.com/css2?family=Lato&display=swap');
 
-.std_full_detail_card p {
-    font-size: large;
-    padding: 13px;
-    font-weight: bold;
-    text-align: center; 
-}
 
-.full_det_btn {
-    height: 4vh;
-    width: 10vw; 
-    margin-left: 45px;
-    border-radius: 20px;
-    border: none;
-    cursor: pointer;
-    background-color: #161616;
-    color: white;
-    font-weight: 400;
-    transition: background-color 0.3s ease; 
-}
 
-.full_det_btn:hover {
-    background-color: #333333; 
-    color: rgba(255, 255, 255, 0.8); 
+.home,
+.reports,
+.products {
+  display: flex;
+  height: 90vh;
+  align-items: center;
+  justify-content: center;
+  font-size: 3rem;
 }
