--- a/Project/src/Components/School/components2/Navbarschmo.css
+++ b/Project/src/Components/School/components2/Navbarschmo.css
@@ -20,6 +20,7 @@
     top: 0;
     left: -100%;
     transition: 850ms;
+
 }
 .nav-menu.active {
     left: 0;
@@ -41,7 +42,7 @@
     height: 100%;
     display: flex;
     align-items: center;
-    padding: 0 16px;
+    padding: 0px 16px;
     border-radius: 4px;
 }
 .nav-text a:hover{
@@ -49,15 +50,17 @@
 }
 .nav-menu-items{
     width: 100%;
+    flex-direction: column;
 }
 
 .navbar-toggle{
     background-color: #060b26;
-    width: 100%;
+    width: 40%;
     height: 80px;
     display: flex;
     justify-content: start;
     align-items: center;
+    padding: 0;
 }
 .span_nav_sch_pro{
     margin-left: 16px;
