--- a/Project/src/Components/School/School_Card.css
+++ b/Project/src/Components/School/School_Card.css
@@ -1,9 +1,6 @@
 .student_card {
   width: 350px;
-  margin-top: 10px;
-  margin-right: 10px;
-  margin-left: 40px;
-  margin-bottom: 10px;
+  margin: 20px;
   border-radius: 4px;
   padding-bottom: 20px;
   background: white;
