--- a/Project/src/Components/School/Std_wise_details.css
+++ b/Project/src/Components/School/Std_wise_details.css
@@ -2,7 +2,7 @@
    display: flex;
    flex: 1;
    height: 100%;
-   width: 98%;
+   width: 100vw;
  }
 
 
@@ -50,8 +50,6 @@
    position: relative;
  }
 
-
-
  .secondary {
    background-color: #feb300;
    border-radius: 20px;
@@ -82,33 +80,26 @@
    top: 35%;
  }
 
+.sd_grid_container{
+  display: grid;
+  min-height: 75vh;
+  background: rgba(211, 211, 211, 0.503);
+  margin-left: auto;
+  margin-right: auto;
+  grid-template-rows: auto 1fr;
+}
+ 
+
 
  .active_card {
-  flex-grow: 1;
-  display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(350px, 0.7fr));
-  gap: 20px;
-  margin-left: 40px;
-  min-height: 75vh;
-  align-items: center;
-  background: rgba(211, 211, 211, 0.503);
+  display: flex;
+  gap: 10px;
+  align-content: center;
+  justify-content: center;
   overflow-y: auto;
-  position: relative; /* Ensure relative positioning */
+  flex-wrap: wrap;
 }
 
-/* Adjust grid layout for smaller screens */
-@media (max-width: 1200px) {
-  .active_card {
-    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
-  }
-}
-
-.std_back_btn {
-  position: absolute;
-  bottom: 0px;
-  left: 50%;
-  transform: translateX(-50%);
-}
 
 .back_btn {
   background: #18a475;
@@ -116,6 +107,9 @@
   border-radius: 6px 6px 3px 3px;
   padding: 10px;
   width: 80px;
+  margin-bottom: 20px;
+  justify-self: center;
+  height: 40px;
   font-weight: bold;
   cursor: pointer;
   border: none;
@@ -136,7 +130,7 @@
    font-size: 22px;
    padding: 3px;
    cursor: pointer;
-   transition: transform 0.5s;
+   transition: transform ease-in-out 0.5s;
  }
 
  .toggle-nav:hover {
