--- a/Project/src/Components/Navbar/CSS/Sd_sub_nav.css
+++ b/Project/src/Components/Navbar/CSS/Sd_sub_nav.css
@@ -3,6 +3,7 @@
    height: 100%;
    background-color: #19222a;
    font-family: "Open Sans", Arial, sans-serif;
+   transition: ease 0.5s;
  }
 
  .sd_ul {
@@ -57,8 +58,3 @@
    margin-bottom: -1px;
  }
 
- .sd_nav_arrow {
-   color: gray;
-   font-size: 20px;
-   margin: 40px 270px;
- }
