--- a/Project/src/Components/School/Std_wise_details.css
+++ b/Project/src/Components/School/Std_wise_details.css
@@ -130,7 +130,7 @@
    font-size: 22px;
    padding: 3px;
    cursor: pointer;
-   transition: transform ease-in-out 0.5s;
+   transition: transform ease 0.5s;
  }
 
  .toggle-nav:hover {
