--- a/Project/src/Components/School/Schoolprofile.css
+++ b/Project/src/Components/School/Schoolprofile.css
@@ -51,11 +51,14 @@ h2{
     padding: 0.5rem;
     width: 6rem;
     border-radius: 2rem;
+    background-color: #0B304D;
+    color: white;
     border: rgb(52,52,52) 0.1rem solid;
 }
 
 .btn_school:hover{
     cursor: pointer;
+    background-color: #2a5c83;
 }
 .form_school {
     background-color: #F0F3F4;
