added home in student details finalllyy

--- a/Project/src/Components/School/components2/Navbarschmo.css
+++ b/Project/src/Components/School/components2/Navbarschmo.css
@@ -128,10 +128,17 @@
     justify-content: center;
     align-items: center;
    
-    
-
   }
  .p_in_rane_us{
     font-size: 20px;
  }
  
+/* Home Section */
+.home_grid_container {
+  transition: margin-left 350ms;
+  /* border:  2px solid black; */
+}
+
+.nav-menu.active + .home_grid_container {
+  margin-left: 250px; 
+}
