--- a/Project/src/Components/School/Pages2/CSS/std_home.css
+++ b/Project/src/Components/School/Pages2/CSS/std_home.css
@@ -1,26 +1,123 @@
-.per_info_table{
+.home_grid_container {
+    display: grid;
+    grid-template-rows: 2fr 1fr 1fr;
+    grid-template-columns: .6fr 2fr;
+    height: 100vh;
+    background-image: linear-gradient(#91baff, #205fff);
+    gap: 10px;
+}
+
+.basic{
+    grid-row: 1/4;
+    grid-column: 1/2;
     display: flex;
     flex-direction: column;
+    justify-content: center;
+    margin-left: 20px;
+}
+.home_img_name {
+    display: flex;
     align-items: center;
     justify-content: center;
+    flex-direction: column;
+    grid-row: 1/4;
+    grid-column: 1/2;
+    border-bottom: 2px solid #666;
+    box-sizing: border-box;
+    border-radius: 15px 15px 0px 0px;
+    margin-top: 50px;
+    background-color: #04AA6D;
+}
+
+.home_img_name img {
+    width: 150px;
+    border-radius: 60px;
+    margin: 10px;
+    padding: 3px;
+    border: 5px solid rgb(214, 211, 211);
+}
+
+.home_img_name p {
+    color: white;
+    font-size: 23px;
+    font-weight: bold;
+}
+
+.basic_info {
+    grid-row: 2/3;
+    grid-column: 1/2;
+    display: flex;
+    flex-direction: column;
+    box-sizing: border-box;
+    border-radius: 0px 0px 15px 15px;
+    padding-left: 40px;
+    background-color: #04AA6D;
+}
+
+.basic_info p {
+
+    font-size: 19px;
+    padding-top: 8px;
+    color: white;
+}
+
+
+.more_info {
+   grid-row: 1/2;
+   grid-column: 2/3;
+}
+
+.more-info-table,.school-info-table,.family-info-table {
+    border-collapse: collapse;
+    display: flex;
+    align-self: center;
+    justify-content: center;
+    margin-top: 10px;
+}
+
+.more-info-table td,
+.more-info-table th,.school-info-table th, td, .family-info-table th,td{
+    border: 1px solid #ddd;
+    padding: 11px 7px;
+    font-size: 15px;
+}
+
+.more-info-table tr ,.school-info-table tr,.family-info-table tr{
+    background-color: #f2f2f2;
+    display: flex;
+    flex-direction: column;
     
 }
 
-.per_info_table h2{
-    padding: 5px;
-    color: black;
+.more-info-table td:hover, .school-info-table td:hover, .family-info-table td:hover {
+    background-color: #ddd;
+    
 }
 
-.per_info_table th{
-    color: black;
-    background: rgb(118, 230, 230);
-    margin: 0;
-    font-size: 1.3rem;
-}
-
-.per_info_table td{
-    background: #111111;
+.more-info-table th,.school-info-table th,.family-info-table th {
+    text-align: left;
+    background-color: #04AA6D;
     color: white;
-    border: none;
-    font-weight: 300;
+}
+
+.sch_flex{
+    display: flex;
+    grid-row: 2/4;
+    grid-column: 2/3;
+    gap: 60px;
+    justify-content: center;
+    align-items: center;
+}
+
+.school-info-table td{
+    width: 5vw;
+}
+
+.school_info h3, .family_info h3{
+    color: white;
+}
+
+.more_info h3{
+    text-align: center;
+    color: white;
 }
