--- a/Project/src/Components/Navbar/CSS/Sd_sub_nav.css
+++ b/Project/src/Components/Navbar/CSS/Sd_sub_nav.css
@@ -1,60 +1,67 @@
- .sd_nav {
-   width: 20vw;
-   height: 100%;
-   background-color: #19222a;
-   font-family: "Open Sans", Arial, sans-serif;
+.sd_nav {
+  width: 20vw;
+  height: 100vh;
+  background-color: #19222a;
+  font-family: "Open Sans", Arial, sans-serif;
+  transition: transform 0.3s ease;
+}
+
+.sd_nav.hidden {
+  transform: translateX(-100%);
+}
+
+.sd_nav.visible {
+  transform: translateX(0);
+}
+
+.sd_ul {
+  list-style-type: none;
+  display: flex;
+  flex-direction: column;
+  margin: 0;
+  padding: 0;
+}
+
+.sd_ul a {
   transition: all 300ms ease;
- }
+  color: white;
+  font-weight: bold;
+  text-decoration: none;
+  text-decoration-color: white;
+}
 
- .sd_ul {
-   list-style-type: none;
-   display: flex;
-   flex-direction: column;
-   margin: 0;
-   padding: 0;
- }
-
- .sd_ul a {
-   transition: all 300ms ease;
-   color: white;
-   font-weight: bold;
-   text-decoration: none;
-   text-decoration-color: white;
- }
-
- .sd_ul a:hover {
-   color: grey;
-   text-underline-offset: 1rem;
-   text-decoration-color: rgb(181, 181, 181);
- }
+.sd_ul a:hover {
+  color: grey;
+  text-underline-offset: 1rem;
+  text-decoration-color: rgb(181, 181, 181);
+}
 
 
- .sd_ul li {
-   padding: 25px;
-   color: white;
-   border-bottom: 1px solid #3f3f3f;
-   font-weight: 500;
-   font-size: 1.1rem;
-   transition: background-color 0.3s;
- }
+.sd_ul li {
+  padding: 25px;
+  color: white;
+  border-bottom: 1px solid #3f3f3f;
+  font-weight: 500;
+  font-size: 1.1rem;
+  transition: background-color 0.3s;
+}
 
- .sd_ul li:hover {
-   background-color: #2f2f2f;
-   border-radius: 5px;
- }
+.sd_ul li:hover {
+  background-color: #2f2f2f;
+  border-radius: 5px;
+}
 
- /* New styles for subtle effects */
- .sd_ul li:first-child {
-   border-top-left-radius: 5px;
-   border-top-right-radius: 5px;
- }
+/* New styles for subtle effects */
+.sd_ul li:first-child {
+  border-top-left-radius: 5px;
+  border-top-right-radius: 5px;
+}
 
- .sd_ul li:last-child {
-   border-bottom-left-radius: 5px;
-   border-bottom-right-radius: 5px;
- }
+.sd_ul li:last-child {
+  border-bottom-left-radius: 5px;
+  border-bottom-right-radius: 5px;
+}
 
- .sd_ul li:not(:last-child) {
-   margin-bottom: -1px;
- }
-
+.sd_ul li:not(:last-child) {
+  margin-bottom: -1px;
+}
